--- a/noise-extension/popup.html
+++ b/noise-extension/popup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NYC Address Validator</title>
+    <title>NYC Apartment Noise Analysis</title>
     <style>
         * {
             margin: 0;
@@ -214,8 +214,8 @@
 </head>
 <body>
     <div class="header">
-        <h1>NYC Address Validator</h1>
-        <p>Validate addresses in the five boroughs</p>
+        <h1>NYC Apartment Noise Analysis</h1>
+        <p>Get Nearby Noise Complaints</p>
     </div>
 
     <div class="input-container">
